# rgb-lightning-node-bare

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  binding.cc  index.d.ts  index.js  package-lock.json  package.json  rln.h  test.js
.github/workflows/: ci.yml  release.yml
patches/: README.md  c-ffi-utexo-patches-v0.5.0-beta.1.patch  c-ffi-utexo-patches-v0.9.0-beta.3.patch
scripts/: build-cffi.sh  build-prebuilds.sh  download-libs.sh  install-native-artifacts.js  native-overlay.js  native-overlay.test.js
